Use CourseTaskStatus enum in submission listing
